css/game.css
.container {
    display: flex;
    flex-direction: column;
  }
  
  #navbar {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    padding: 1rem 2rem;
  }
  
  #logo {
    width: auto;
    height: 80px;
    padding-bottom: 16px;
  }
  
  .navbar-links {
    display: flex;
    flex-direction: row;
  }
  
  .navbar-links > * {
    cursor: pointer;
  }
  
  .navbar-mid-items > * {
    margin-left: 16px;
    font-size: 1.5rem;
    line-height: 2rem;
    font-weight: 500;
  }
  
  .navbar-auth > * {
    display: flex;
    align-items: center;
    margin-left: 2rem;
    font-size: 1.25rem;
    line-height: 1.75rem;
    font-weight: 400;
  }
  
  .content {
    margin-top: 4rem;
    padding: 0.5rem 5rem;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
  }
  
  .content-action-call {
    display: flex;
    flex-direction: column;
    padding: 0rem 8rem 0rem 1rem;
  }
  
  .content-action-call > * {
    margin-top: 0.5rem;
  }
  
  #action-call-btn {
    margin-top: 1rem;
    font-size: 1.25rem;
    line-height: 1.75rem;
    font-weight: 500;
    padding: 0.5rem 3rem;
    align-self: flex-start;
  }
  
  #action-call-subtitle {
    font-size: 1.25rem;
    line-height: 1.75rem;
  }
  
  #action-call-title {
    font-size: 1.5rem;
    line-height: 2rem;
    font-weight: 500;
  }
  
  .content-board-container {
    position: relative;
    flex-shrink: 0;
    width: 49rem;
    height: 28rem;
  }
  
  #opacity-board {
    width: 100%;
    height: 100%;
    object-fit: cover;
    opacity: 8%;
  }
  
  #content-board-abs {
    position: absolute;
    right: 4rem;
    top: 4rem;
    width: 30rem;
    height: 18rem;
  }

  .game-grid-container {
    display: inline-grid;
    padding: 50px;
    grid-template-columns: 100px 100px 100px 100px 100px 100px;
    grid-template-rows: 75px 75px 75px 75px 75px 75px 75px;
    background-color: #F4F4F5;
    gap: 1px;
  }

  .grid-item {
    background-color: #2563EB;
    padding: 20px;
    font-size: 10px;
    text-align: bottom-right;
  }

  .game-side-bar-container {
      display: flex;
      flex-direction: column;
      background-color: white;
      width: 185px;
      padding: 50px;
      gap: 10px;
  }

  .game-side-bar-item {
    color: #B3B3B3;
    display: flex;
    flex-direction: column;

  }


  .game-container {
      display: flex;
      flex-direction: row;
  }

  .side-bar-title {
    display: grid;
    grid-template-columns: 20px 100px;
    color: #a1a1aa;
    font-size: 20px;
    gap: 5px;
  }

  .side-bar-crew {
      display: grid;
      grid-template-columns: 40px 80px 20px;
      padding: 10px;
  }

  .side-bar-inventory {
    display: grid;
    grid-template-columns: 40px 150px;  
    padding: 10px;
  }

  .inventory-item {
    display: flex;
    flex-direction: column;
  }

  .inventory-sell-button {
        display: flex;
        flex-direction: row;
        color: #4ade80;
        text-decoration: none;
  }

  .side-bar-text {
    color: black;
  }

  .side-bar-star {
    color: #a1a1aa;
  }

  .side-bar-actions {
    display: grid;
    grid-template-columns: 40px 150px;  
    padding: 10px; 
  }



.side-bar-button {
  display: flex;
  felx-direction: row;
  background-color: #e4e4e7;
  border-radius: 4px;
  padding: 10px;
  padding-left: 10%;
  margin: 20px;
  margin-top: auto;
  gap: 5px;
}

.side-bar-button:hover {
    opacity: 0.75;
}

#inventory-logo {
    height: 20px; 

}

#char-face {
    width: 80%;
    height: 80%;
    border-radius: 50%;
  }

#money {
    height: 19px;
}
  

